start class 4 progress 27:00 :sleepy::sleepy::sleepy:

--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -74,6 +74,7 @@
                     span {
                         margin-left: 8px;
                         color: #29292e;
+                        font-weight: 500;
                         font-size: 14px;
                     }
                 }
@@ -94,6 +95,10 @@
                     }
                 }
             }
+        }
+
+        .question-list {
+            margin-top: 32px;
         }
     }
 }
